3.0.2/_sources/gallery/text_labels_and_annotations/font_file.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_font_file.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_font_file.py:


===================================
Using a ttf font file in Matplotlib
===================================

Although it is usually not a good idea to explicitly point to a single ttf file
for a font instance, you can do so using the `font_manager.FontProperties`
*fname* argument.

Here, we use the Computer Modern roman font (``cmr10``) shipped with
Matplotlib.

For a more flexible solution, see
:doc:`/gallery/text_labels_and_annotations/font_family_rc_sgskip` and
:doc:`/gallery/text_labels_and_annotations/fonts_demo`.



.. code-block:: python


    import os
    from matplotlib import font_manager as fm, rcParams
    import matplotlib.pyplot as plt

    fig, ax = plt.subplots()

    fpath = os.path.join(rcParams["datapath"], "fonts/ttf/cmr10.ttf")
    prop = fm.FontProperties(fname=fpath)
    fname = os.path.split(fpath)[1]
    ax.set_title('This is a special font: {}'.format(fname), fontproperties=prop)
    ax.set_xlabel('This is the default font')

    plt.show()





.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_font_file_001.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:



.. code-block:: python


    import matplotlib
    matplotlib.font_manager.FontProperties
    matplotlib.axes.Axes.set_title







.. _sphx_glr_download_gallery_text_labels_and_annotations_font_file.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: font_file.py <font_file.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: font_file.ipynb <font_file.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
